# tap-feefo

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
tap_feefo/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tap_feefo/schemas/: __init__.py  product.py  review.py
tests/: __init__.py  test_core.py
